2010-01-05  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in (write_out_file):
	Don't write out StartFunction if not defined.

	Don't put a blank template for StartFunction if there isn't one in the
	config file.

2010-01-03  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in (check_func_definition):
	* fvwm-convert-2.6.in (handle_continuation):
	Handle "+ foo" lines correctly by not culling them.

	Because of how we collate "+ foo" lines for startfunction, etc., we want
	to also ensure we keep them around for functions we don't care to
	explicitly convert over.

2010-01-03  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in (write_out_file):
	If no output filename given, put files in CWD.

	Actually do what the man page says and put processed files in the CWD if
	no output files are given (implied if -f is used for any Read files.)

2010-01-03  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in (convert_key_mouse_bindings):
	Retain white space between Mouse/Key fields.

	Don't cull any deliberate whitespace between fields if we end up
	converting some of the options found.

2010-01-02  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	Be more strict in file handling when following Read statements.

	Ensure we don't overwrite any previously defined file when following
	Read files picked up by using "-f".
	
2010-01-02  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	* fvwm-convert-2.6.1.in:
	Handle continuation lines.

	Process those lines ending in a backslash by prepending them to the
	previous line and just shunting it to a common function.  When writing
	out the file, ensure we preserve the split lines.

2010-01-01  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	Use !UsePPosition over NoPPosition when negating style lines..

	When converting styles over, use !UsePPosition, and not convert to
	!PPosition -- which would have happened due to how the negation for